# flowstate

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
config/: flowstate.yaml
design/: flowstate-mvp-design-doc.md
docs/: CODEX_PRIMER.md  CODEX_WHITE_PAPER.md  CODEX_WHITE_PAPER_v2.md
src/flowstate/: __init__.py  __main__.py
src/flowstate/analysis/: __init__.py  gemini.py  scanner.py
src/flowstate/cli/: __init__.py  analyze.py  corpus.py  download_videos.py  run.py  write_metadata.py
src/flowstate/engine/: __init__.py  camelot.py  engine.py  factors.py
src/flowstate/integrations/: __init__.py  rekordbox.py
src/flowstate/models/: __init__.py  corpus.py  recommendations.py  track.py
src/flowstate/ui/: __init__.py  terminal.py  web.py
